# libfizmo

./: .gitignore  .gitmodules  CHANGELOG.md  CHANGELOG.txt  CMakeLists.txt  COPYRIGHT.md  COPYRIGHT.txt  LICENSE.txt  Makefile  Makefile.am  Makefile.in  README.md  README.txt  aclocal.m4  config-conds.m4  config-flags.m4  config-libs.m4  config-subst.m4  config.default.mk  config.macports.mk  configfile-example.md  configfile-example.txt  configure  configure.ac  libfizmo-initialization.md  libfizmo-initialization.txt
debian/: changelog  control  copyright  rules  watch
debian/upstream/: signing-key.pgp
doc/: changelog.xml  configfile-example.txt  configfile-example.xml  configuration-options.txt  copyright.xml  create-mds.sh  create-txts.sh  libfizmo-initialization.txt  libfizmo-initialization.xml  readme.xml
src/: CMakeLists.txt  libfizmo.pc.in
src/blorb_interface/: blorb_interface.h
src/cell_interface/: Makefile  cell_interface.c  cell_interface.h
src/filesys_interface/: filesys_interface.h
src/hyph_patterns/: CMakeLists.txt  hyph_pattern_tools.c  hyph_pattern_tools.h  hyph_patterns.c  hyph_patterns.h  pattern_setup.c
src/interpreter/: Makefile  Makefile.am  Makefile.in  babel.c  babel.h  blockbuf.c  blockbuf.h  blorb.c  blorb.h  cmd_hst.c  cmd_hst.h  config.c  config.h  debugger.c  debugger.h  filelist.c  filelist.h  fizmo.c  fizmo.h  history.c  history.h  hyphenation.c  hyphenation.h  iff.c  iff.h  math.c  math.h  mathemat.c  mathemat.h  misc.c  misc.h  mt19937ar.c  mt19937ar.h  object.c  object.h  output.c  output.h  property.c  property.h  routine.c  (+22 more)
src/locales/: CMakeLists.txt  libfizmo_locales.c  libfizmo_locales.h  locale_data.c  locale_data.h  locale_setup.c  locale_setup.h
src/locales/de_DE/: libfizmo_i18n.txt
src/locales/en_US/: libfizmo_i18n.txt
src/locales/fr_FR/: libfizmo_i18n.txt
src/screen_interface/: ScreenInterface.cpp  ScreenInterface.h  screen_cell_interface.h  screen_interface.h
src/sound_interface/: sound_interface.h
src/tools/: Makefile  Makefile.am  Makefile.in  filesys.c  filesys.h  filesys_c.c  filesys_c.h  i18n.c  i18n.h  list.c  list.h  stringmap.c  stringmap.h  tools_test.c  tracelog.c  tracelog.h  types.c  types.h  unused.h  z_ucs.c  z_ucs.h
